# ERVmancer

./: .gitignore  MANIFEST.in  README.md  meta.yaml  pyproject.toml  setup.py
src/ervmancer/: main.py
src/ervmancer/data/: cleaned_clades_under_dict.pkl  herv_path_dict.pkl
src/ervmancer/kmer/: process_kmer.py
src/ervmancer/multimap/: multimapped_sam.py
src/ervmancer/preprocessing/: filter_reads.py  lca.py  subset_reads.py
src/ervmancer/resolve_reads/: other_methods.py  resolve_and_export.py
src/ervromancer/: main.py
src/ervromancer/preprocessing/: filter_reads.py
